fix advanced popper overflow style

--- a/projectforge-webapp/src/components/design/popper/Popper.module.scss
+++ b/projectforge-webapp/src/components/design/popper/Popper.module.scss
@@ -34,7 +34,7 @@
     .additional {
       background-color: #fff;
       opacity: 0;
-      overflow: hidden;
+      overflow: scroll;
 
       // Set height to 0 after the transition is done.
       max-height: 0;
